// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridAutoRows renders 0 1`] = `
Array [
  .c0 {
  grid-auto-rows: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridAutoRows renders function 1`] = `
Array [
  .c0 {
  grid-auto-rows: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridAutoRows renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-auto-rows: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridAutoRows renders negative number 1`] = `
Array [
  .c0 {
  grid-auto-rows: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridAutoRows renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-auto-rows: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-auto-rows: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-auto-rows: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-auto-rows: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-auto-rows: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-auto-rows: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-auto-rows: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-auto-rows: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-auto-rows: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-auto-rows: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-auto-rows: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-auto-rows: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-auto-rows: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-auto-rows: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-auto-rows: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-auto-rows: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridAutoRows renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    grid-auto-rows: July;
  }
}

@media April {
  .c0 {
    grid-auto-rows: August;
  }
}

@media January {
  .c0 {
    grid-auto-rows: September;
  }
}

@media April {
  .c0 {
    grid-auto-rows: November;
  }
}

@media June {
  .c0 {
    grid-auto-rows: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-auto-rows: July;
  }
}

@media April {
  .c0 {
    grid-auto-rows: August;
  }
}

@media January {
  .c0 {
    grid-auto-rows: September;
  }
}

@media April {
  .c0 {
    grid-auto-rows: November;
  }
}

@media June {
  .c0 {
    grid-auto-rows: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-auto-rows: January;
  }
}

@media April {
  .c0 {
    grid-auto-rows: December;
  }
}

@media January {
  .c0 {
    grid-auto-rows: April;
  }
}

@media April {
  .c0 {
    grid-auto-rows: May;
  }
}

@media June {
  .c0 {
    grid-auto-rows: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-auto-rows: January;
  }
}

@media April {
  .c0 {
    grid-auto-rows: December;
  }
}

@media January {
  .c0 {
    grid-auto-rows: April;
  }
}

@media April {
  .c0 {
    grid-auto-rows: May;
  }
}

@media June {
  .c0 {
    grid-auto-rows: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridAutoRows renders postitive number 1`] = `
Array [
  .c0 {
  grid-auto-rows: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridAutoRows renders string 1`] = `
Array [
  .c0 {
  grid-auto-rows: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridAutoRows renders valid theme path 1`] = `
Array [
  .c0 {
  grid-auto-rows: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-auto-rows: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
